objects/tffa__SubmissionPartyXref__c.object
<CustomObject>
    <description>An individual or a legal entity which is applying for certain services/products in the bank. An applicant exists only in the context of a submission.</description>
    <fields>
        <fullName>HasPrimaryContactInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the submission party has primary contact info</description>
        <label>HasPrimaryContactInfo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPartyCompleteCount__c</fullName>
        <description>if the record is in complete state then this derives 1 else 0</description>
        <formula>IF(ISPICKVAL(tffa__Status__c,&apos;COMPLETE&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if the record is in complete state then this derives 1 else 0</inlineHelpText>
        <label>isPartyCompleteCount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isPartyPresentCount__c</fullName>
        <description>if tffa__IsPresent__c is true then it derives 1 else 0</description>
        <formula>IF( tffa__IsPresent__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if tffa__IsPresent__c is true then it derives 1 else 0</inlineHelpText>
        <label>isPartyPresentCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__CDDStatus__c</fullName>
        <description>A rollup of status across DueDiligence(s) of type CDD.</description>
        <label>CDD Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__HasPrimaryMailingAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True , If the party has used the Primary Party Mailing Address</description>
        <label>HasPrimaryMailingAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasPrimaryPreferredAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the party has indicated that is uses same address the primary preferred address</description>
        <label>HasPrimaryPreferredAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsAuthenticated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the applicant was authenticated when he/she was added to the submission.</description>
        <label>Is Authenticated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsPresent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the joint applicant was physically present during application data capture.</description>
        <label>Is present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__LastResumedOn__c</fullName>
        <description>Date on which submission was last resumed by joint applicant</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last resumed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__OTPExpiresOn__c</fullName>
        <description>Datetime value on which confirmation token expires for the current party</description>
        <encryptionScheme>None</encryptionScheme>
        <label>One Time Token expires on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__OTPStatus__c</fullName>
        <description>Status of OTP validation</description>
        <label>OTP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__OTPStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__OTP__c</fullName>
        <description>One time confirmation token generated for the applicant to authenticate himself</description>
        <encryptionScheme>None</encryptionScheme>
        <label>One Time Confirmation token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to Party object @managed</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Submissions</relationshipLabel>
        <relationshipName>Submissions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PrimaryContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies primary point of contact in a business application. This is different from primary field which identifies the primary applicant. e.g. The primary applicant in a business application is a business.</description>
        <label>Primary contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current applicant is primary applicant of the application.</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Role__c</fullName>
        <defaultValue>&quot;APPLICANT&quot;</defaultValue>
        <description>The role played by the party in the submission. Most common value will be APPLICANT.
There can be other parties like Brokers, MLO etc who play a role in the submission but may not play a role in the application/account.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionPartyRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__State__c</fullName>
        <description>store the current stage/state/step of the submission the current party/applicant  is at. This is useful for joint applicants where each one is filling his own data.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>The data entry status of the party in this submission. This is applicable in case of joint applications where the party fills data individually</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionPartyStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__SubmissionStatus__c</fullName>
        <description>Indicates current status of the submission for the current applicant.This will be computed and be useful for regulations.</description>
        <label>Submission status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__SubmissionStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Submission__c</fullName>
        <description>Reference to parent submission object.</description>
        <label>Submission</label>
        <referenceTo>tffa__Submission__c</referenceTo>
        <relationshipLabel>Parties</relationshipLabel>
        <relationshipName>PartyXrefs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of the party. Allowed values are - INDIVIDUAL, ORGANIZATION</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PartyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Url__c</fullName>
        <description>URL to access current submission</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Submission Party</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Submission Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>